# goose

./: .gitignore  Cargo.toml  README.md  example.kl  install.sh
docs/: tutorial.md  values.md
examples/: basic.hnk  basic.kl  example.hnk  example.kl  types.kl  write.hnk
src/: ast.rs  cmd.rs  interp.rs  main.rs  parser.rs  token.rs
src/ast/: interp.rs  parser.rs
src/interp/: array.rs  bit.rs  char.rs  char_array.rs  float.rs  func.rs  int.rs  null.rs  ty.rs
tests/: build_examples.rs
