[package]
name = "goose"
version = "0.1.0"
edition = "2021"
description = "A language that wants to cause problems"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive", "cargo"] }
logos = "0.12.0"
chumsky = "0.8.0"

[dev-dependencies]
assert_cmd = "2.0"
